[gd_scene load_steps=4 format=3 uid="uid://cejjrtj4kqoo0"]

[ext_resource type="Script" path="res://minions/minion.gd" id="1_uibiq"]
[ext_resource type="PackedScene" uid="uid://cec8c5m8yc1y6" path="res://ui/move_selector.tscn" id="3_gpxp8"]
[ext_resource type="PackedScene" uid="uid://doq437iipexmp" path="res://ui/minion_stats.tscn" id="4_p136k"]

[node name="Minion" type="Node2D"]
script = ExtResource("1_uibiq")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="MoveMenu" parent="." instance=ExtResource("3_gpxp8")]
unique_name_in_owner = true
visible = false

[node name="MinionStats" parent="." instance=ExtResource("4_p136k")]
unique_name_in_owner = true

[node name="Control" type="Control" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -62.0
offset_right = 61.5
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClickDetector" type="Button" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
